 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.8rc3

 - [ZBX-4150] fixed processing of quoted function parameters (Sasha)

Changes for 1.8.8rc2

 - [ZBX-4141] fixed possible cycling of server/proxy processes after unsuccessful execution of SQL statement (Sasha)
 - [ZBX-4135] fixed item selection in trigger expression (Eduard)

Changes for 1.8.8rc1

 - [ZBX-3676] fixed item selection in bar report (Eduard)
 - [ZBX-4070] improved performance of handling of trigger functions (Sasha)
 - [ZBXNEXT-921] added option to show items without data in latest data (Vedmak)
 - [ZBX-2457] changed "type" to "ENGINE" in MySQL upgrade patches for MySQL 5.5 compatibility (Richlv)
 - [ZBX-4099] fixed possible crash when processing of functions sum(), min(), max() or diff() in triggers, aggregated checks or calculated items (Sasha)
 - [ZBXNEXT-902] changed API search wildcard from "%" to "*" (Vedmak,Eduard)
 - [ZBX-3967] fixed alerter hang on long running alert scripts (Deniss)
 - [ZBX-3970] fixed proxy crash after database connection to postgresql is recovered (Deniss)
 - [ZBX-3175] fixed value type for 'vfs.fs.size[/var,used]' in data.sql (Sasha)
 - [ZBX-4068] updated French translation; thanks to Joseph Bueno (Richlv)
 - [ZBX-4066] fixed macros saving in administration (Eduard)
 - [ZBXNEXT-900] added support of {TRIGGER.ID} macro in a trigger url (Vedmak,Sasha)
 - [ZBX-4045] added check for duplicate hosts or proxies - if found, configuration syncer logs a warning and exits (rudolfs)
 - [ZBX-4059] fixed a potential buffer overflow in item parameter parsing (rudolfs)

Changes for 1.8.7

1.8.7rc1 was released as 1.8.7 without any changes
